# machmallow

./: .gitignore  BRAND.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  YOUTUBE.md
.github/workflows/: ci.yml
cases/: TEMPLATE.ini  blasius.ini  bubble.ini  bubble_hero.ini  bubblefield.ini  cylinder_bowshock.ini  cylinder_cutcell.ini  cylinder_hero.ini  deflagration.ini  detonation.ini  dmr.ini  dmr_hero.ini  kh.ini  machmallow.ini  nozzle.ini  rm.ini  rt.ini  shear.ini  shock_wall.ini  sod.ini  triangle.ini  von_karman.ini  wc_step.ini  wedge.ini
docs/: ARCHITECTURE.md  CASE_FORMAT.md  CUTCELL_AMR_PLAN.md  DEVELOPER.md  GUIDE.md  NUMERICS.md  VALIDATION.md  index.html  robots.txt  sitemap.xml
shaders/: cutcell.metal  euler2d.metal  render.metal  saxpy.metal
src/: main.cpp
src/amr/: Amr2.hpp  AmrGpu.hpp  AmrGpuCut.hpp  AmrGpuML.hpp  AmrGpuMLCut.hpp  AmrML.hpp
src/backend/metal/: CutCell2DGpu.hpp  Euler2DGpu.hpp  MetalContext.cpp  MetalContext.hpp  metal_impl.cpp
src/cases/: CaseDef.hpp  Dmr.hpp
src/core/: Boundary.hpp  Config.hpp  Grid.hpp  Parallel.hpp  Types.hpp
src/drivers/: analytic_suite.cpp  benchmark.cpp  blasius.cpp  casedef_test.cpp  convergence.cpp  cutcell_amr.cpp  cutcell_amr_ml.cpp  cutcell_amr_o2.cpp  cutcell_amr_prod.cpp  cutcell_amr_viscous.cpp  cutcell_cp.cpp  cutcell_cylinder.cpp  cutcell_euler.cpp  cutcell_geom.cpp  cutcell_gpu.cpp  cutcell_gpu_amr.cpp  cutcell_gpu_ml.cpp  cutcell_gpu_viscous.cpp  cutcell_o2.cpp  cutcell_viscous.cpp  deflagration.cpp  detonation.cpp  dmr.cpp  dmr_amr.cpp  dmr_gpu.cpp  hs_suite.cpp  immersed.cpp  immersed_amr.cpp  immersed_case.cpp  immersed_gpu.cpp  immersed_noslip.cpp  immersed_wedge.cpp  kh_amr.cpp  ml_amr.cpp  mlgpu_amr.cpp  mms.cpp  reactor.cpp  run.cpp  shear.cpp  sod1d.cpp  (+4 more)
src/geometry/: CutCell.hpp
src/io/: Checkpoint.hpp  Diagnostics.hpp  VthbWriter.hpp  VtiWriter.hpp
src/numerics/: ExactRiemann.hpp  Hllc.hpp  Limiter.hpp
src/physics/: Euler.hpp  Reaction.hpp  TwoGas.hpp
src/render/: CocoaShim.h  CocoaShim.mm  LiveView.hpp
src/solver/: CutCell2D.hpp  Forces.hpp  Muscl2D.hpp  Muscl2DSpecies.hpp  Weno2D.hpp
tools/: brand_avatar.py  hero.py  nozzle_pedago.py  plot_benchmark.py  plot_convergence.py  schlieren_video.py
vv/: README.md  blasius_study.sh  conservation.ini  generate.py
vv/cases/: analytic.md  blasius.md  conservation.md  cutcell.md  detonation.md  dmr.md  immersed.md  infrastructure.md  mms.md  order_of_accuracy.md  reactor.md  shock_bubble.md  sod.md  sod2d.md  sod_amr.md  species.md  wedge.md  weno.md
vv/data/: analytic_rt.csv  analytic_sedov.csv  analytic_toro1.csv  analytic_toro2.csv  analytic_toro3.csv  analytic_toro4.csv  blasius_cf_weno.csv  blasius_mach.csv  blasius_profile_weno.csv  blasius_refinement.csv  convergence.csv  cutcell_cp_cut.csv  cutcell_cp_staircase.csv  cutcell_cylinder_centerline.csv  detonation_front.csv  immersed_noslip.csv  mms.csv  reactor_isothermal.csv  shear_profile.csv  sod2d_exact.csv  sod2d_field.csv  sod_100.csv  sod_1600.csv  sod_200.csv  sod_400.csv  sod_800.csv  sod_amr_profile.csv  sod_muscl_400.csv  sod_weno_400.csv  species_interface.csv  species_mass.csv  species_sod.csv  species_sod_amr.csv  vv_conservation_log.csv  wedge_refinement.csv  weno_sod_muscl.csv  weno_sod_weno.csv  weno_vortex_muscl.csv  weno_vortex_weno.csv
